--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   zoom_tap_animation: ^1.1.0
   svg_flutter: ^0.0.1
   google_fonts: ^6.2.1
+  month_picker_dialog: ^4.0.1
 
 dev_dependencies:
   flutter_test:
