--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   svg_flutter: ^0.0.1
   google_fonts: ^6.2.1
   gap: ^3.0.1
+  flutter_gap: ^1.0.0
 
 dev_dependencies:
   flutter_test:
