--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_fonts: ^6.2.1
   gap: ^3.0.1
   flutter_gap: ^1.0.0
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
