--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   cloud_firestore: ^4.14.0
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
+  rename: ^3.0.2
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
@@ -34,7 +36,6 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/
     - assets/images/
     - assets/icons/
     - assets/flags/
