--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   rename: ^3.0.2
   get_it: ^7.7.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
