--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/flags/
+    - assets/svg/
     - assets/images/account_screen_icons/
 
   # example:
