--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   rename: ^3.0.2
   get_it: ^7.7.0
   equatable: ^2.0.5
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
