--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   get_it: ^7.7.0
   equatable: ^2.0.5
   url_launcher: ^6.3.0
+  adaptive_theme: ^3.6.0
 
 dev_dependencies:
   flutter_test:
